--- a/Frontend (Angular 14)/angularProject/package.json
+++ b/Frontend (Angular 14)/angularProject/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "angular-datatables": "^14.0.0",
+    "angular-ng-autocomplete": "^2.0.12",
     "datatables.net": "^1.13.1",
     "datatables.net-dt": "^1.13.1",
     "jquery": "^3.6.1",
